Fixed for Patrick

--- a/Data Loading/Data Load to Sql Stage.ipynb
+++ b/Data Loading/Data Load to Sql Stage.ipynb
@@ -41,13 +41,10 @@
     "#connections\n",
     "endpoint = secrets.get('DATABASE_ENDPOINT')\n",
     "\n",
-    "# This is the default admin/root account. Leave this value as 'postgres':\n",
     "user = secrets.get('DATABASE_USER')\n",
     "\n",
-    "# This is the master password you set above:\n",
     "password = secrets.get('DATABASE_PASSWORD')\n",
     "\n",
-    "## Do not change this value or rename this variable, it is used by the autograder below:\n",
     "connection = create_engine(f'postgresql+psycopg2://{user}:{password}@{endpoint}/Capstone', pool_recycle=3600);"
    ]
   },
@@ -2568,10 +2565,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "8405564a-c349-446b-bd8a-65fa7ac0e433",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "945"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "calendar.to_sql('calendar',con=connection, if_exists='replace',index=False, schema='Stage')"
    ]
@@ -2586,10 +2594,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "8a5e955d-d088-4bc7-9ed1-1884d9e076fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>108061</td>\n",
+       "      <td>553741</td>\n",
+       "      <td>2011-09-21</td>\n",
+       "      <td>822907</td>\n",
+       "      <td>Pedro &amp; Katie</td>\n",
+       "      <td>Lisa is superb hostess, she will treat you lik...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>108061</td>\n",
+       "      <td>683278</td>\n",
+       "      <td>2011-11-01</td>\n",
+       "      <td>236064</td>\n",
+       "      <td>Tim</td>\n",
+       "      <td>This was a lovely little place walking distanc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>108061</td>\n",
+       "      <td>714889</td>\n",
+       "      <td>2011-11-13</td>\n",
+       "      <td>1382707</td>\n",
+       "      <td>Shane</td>\n",
+       "      <td>Lisa was very nice to work with.  However, we ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>108061</td>\n",
+       "      <td>1766157</td>\n",
+       "      <td>2012-07-21</td>\n",
+       "      <td>416731</td>\n",
+       "      <td>Brenda</td>\n",
+       "      <td>I feel very lucky to have found this beautiful...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>108061</td>\n",
+       "      <td>2033065</td>\n",
+       "      <td>2012-08-19</td>\n",
+       "      <td>1858880</td>\n",
+       "      <td>Lindsey</td>\n",
+       "      <td>Great roomy little apartment, beautiful privat...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id       id        date  reviewer_id  reviewer_name  \\\n",
+       "0      108061   553741  2011-09-21       822907  Pedro & Katie   \n",
+       "1      108061   683278  2011-11-01       236064            Tim   \n",
+       "2      108061   714889  2011-11-13      1382707          Shane   \n",
+       "3      108061  1766157  2012-07-21       416731         Brenda   \n",
+       "4      108061  2033065  2012-08-19      1858880        Lindsey   \n",
+       "\n",
+       "                                            comments  \n",
+       "0  Lisa is superb hostess, she will treat you lik...  \n",
+       "1  This was a lovely little place walking distanc...  \n",
+       "2  Lisa was very nice to work with.  However, we ...  \n",
+       "3  I feel very lucky to have found this beautiful...  \n",
+       "4  Great roomy little apartment, beautiful privat...  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reviews = pd.read_csv(os.path.join(parentDirectory, 'reviews.csv'))\n",
     "reviews.head()"
@@ -2786,10 +2894,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "b948d2bb-3249-41a7-8473-3162c6f43a9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "517"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reviews.to_sql('reviews',con=connection, if_exists='replace',index=False, schema='Stage')"
    ]
