--- a/app/Database Loading Amenities & Reviews.ipynb
+++ b/app/Database Loading Amenities & Reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "d773fd03-43ff-4427-b4e6-cbe2a3bbeb82",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,13 @@
     "from secretsPaul import secrets\n",
     "import mysql.connector\n",
     "import plotly.express as px\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import nlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "5f95b1a2-0f01-44fb-8f1c-52342a267e93",
    "metadata": {},
    "outputs": [],
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "4c638a24-7ff5-45bf-bea7-cb583e87f068",
    "metadata": {},
    "outputs": [],
@@ -58,112 +59,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8eafc8f9-6c48-45e8-9135-8abe224be5d5",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "97021722-8cc8-46ef-8b87-b89077138ec8",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "## NLP FUNCTIONS - Updated to handle looping\n",
-    "\n",
-    "def get_top_amenities(listing_df):\n",
-    "    # correlating amenities with review scores\n",
-    "    # adapted from https://stackoverflow.com/questions/48873233/is-there-a-way-to-get-correlation-with-string-data-and-a-numerical-value-in-pand\n",
-    "\n",
-    "    df = listing_df.copy()\n",
-    "    amen_list = list(df['amenities'])\n",
-    "\n",
-    "    new_list = [item.strip('[]\\' \"\"').replace(' u2013 ', ': ').replace('u2019', \"'\").replace('\"', '') for item in\n",
-    "                amen_list]\n",
-    "\n",
-    "    list_of_lists = []\n",
-    "    for item in new_list:\n",
-    "        new_item = item.split(\",\")\n",
-    "        list_of_lists.append(new_item)\n",
-    "\n",
-    "    flattened = [val for sublist in list_of_lists for val in sublist]\n",
-    "    counts = Counter(flattened)\n",
-    "\n",
-    "    high_counts = {k: c for k, c in counts.items() if c >= 500}\n",
-    "\n",
-    "    top_amen = list(high_counts.keys())\n",
-    "\n",
-    "    full_new_list = []\n",
-    "    for each_list in list_of_lists:\n",
-    "        new_new_list = list(set(top_amen).intersection(set(each_list)))\n",
-    "        full_new_list.append(new_new_list)\n",
-    "\n",
-    "    df['amenities'] = full_new_list\n",
-    "\n",
-    "    s_corr = pd.DataFrame(df.amenities.str.get_dummies(sep=',').corrwith(\n",
-    "        df.review_scores_value / df.review_scores_value.max()))\n",
-    "    s_corr.reset_index(inplace=True)\n",
-    "    s_corr.rename(columns={'index': 'amenity', 0: 'score'}, inplace=True)\n",
-    "\n",
-    "    for idx, item in enumerate(s_corr['amenity']):\n",
-    "        s_corr.at[idx, 'amenity'] = s_corr.at[idx, 'amenity'].lower().strip('[]\\' \"\"')\n",
-    "    s_corr = s_corr.sort_values(by='score', ascending=False)\n",
-    "    s_corr['score'] = s_corr['score'].round(3)\n",
-    "\n",
-    "    amenities_df = s_corr.set_index('amenity')[:20]\n",
-    "\n",
-    "    return amenities_df"
+    "#Pulling in reviews & hostnames for removal\n",
+    "all_reviews = pd.read_sql('SELECT comments, scrape_city FROM reviews',connection) \n",
+    "host_names=pd.read_sql('Select Distinct host_name from listings',connection)\n",
+    "hostnames = set(host_names.host_name)\n",
+    "hostnames = {hn.lower() for hn in hostnames}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "53c09d39-4ce4-4c36-a36b-3405678c4019",
    "metadata": {},
    "outputs": [],
    "source": [
     "#unique list of all cities\n",
-    "scrape_list=list(all_listings['scrape_city'].unique())"
+    "scrape_list_=list(all_listings['scrape_city'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f9f68c30-4b26-4b1c-aa8a-30e3512ef72d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\paull\\AppData\\Local\\Temp\\ipykernel_33292\\1784826504.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  topr['scrape_city']=city\n"
+     ]
+    }
+   ],
    "source": [
     "#Looping through each city and running the amenities\n",
     "top_amenities=pd.DataFrame(columns=['amenity','score','scrape_city'])\n",
+    "top_reviews=pd.DataFrame(columns=['pos_word','pos_score','neg_word','neg_score','scrape_city'])\n",
     "for city in scrape_list:\n",
-    "    topa=get_top_amenities(all_listings[all_listings['scrape_city']==city])\n",
+    "    topa=nlp.get_top_amenities(all_listings[all_listings['scrape_city']==city])\n",
     "    topa['scrape_city']=city\n",
     "    topa.reset_index(inplace=True)\n",
     "    top_amenities=pd.concat([top_amenities, topa],ignore_index=True)\n",
+    "    topr=nlp.get_top_review_terms(all_reviews[all_reviews['scrape_city']==city],host_names)\n",
+    "    topr['scrape_city']=city\n",
+    "    top_reviews=pd.concat([top_reviews, topr],ignore_index=True)\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ef900e54-e793-423f-9f76-c2c3840c1c9a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "582"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_amenities.to_sql('top_amenities',con=connection, if_exists='replace',index=False, chunksize=1000, method='multi')"
+    "top_amenities.to_sql('top_amenities',con=connection, if_exists='replace',index=False, chunksize=1000, method='multi')\n",
+    "top_reviews.to_sql('top_reviews',con=connection, if_exists='replace',index=False, chunksize=1000, method='multi')"
    ]
   }
  ],
