updated readme and sql table files - data loading

--- a/functions/Database Loading Amenities & Reviews.ipynb
+++ b/functions/Database Loading Amenities & Reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "d773fd03-43ff-4427-b4e6-cbe2a3bbeb82",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "5f95b1a2-0f01-44fb-8f1c-52342a267e93",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "4c638a24-7ff5-45bf-bea7-cb583e87f068",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "8eafc8f9-6c48-45e8-9135-8abe224be5d5",
    "metadata": {},
    "outputs": [],
@@ -73,18 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "53c09d39-4ce4-4c36-a36b-3405678c4019",
    "metadata": {},
    "outputs": [],
    "source": [
     "#unique list of all cities\n",
-    "scrape_list_=list(all_listings['scrape_city'].unique())"
+    "scrape_list=list(all_listings['scrape_city'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "f9f68c30-4b26-4b1c-aa8a-30e3512ef72d",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\paull\\AppData\\Local\\Temp\\ipykernel_33292\\1784826504.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\paull\\AppData\\Local\\Temp\\ipykernel_267868\\1784826504.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "ef900e54-e793-423f-9f76-c2c3840c1c9a",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "310"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,6 +138,14 @@
     "top_amenities.to_sql('top_amenities',con=connection, if_exists='replace',index=False, chunksize=1000, method='multi')\n",
     "top_reviews.to_sql('top_reviews',con=connection, if_exists='replace',index=False, chunksize=1000, method='multi')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4291c34-853a-4a97-b0b6-44297d112c98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
